# kv34.sh

./: .gitignore  .mcp.json  README.md  app.py  kv-deploy.json  pyproject.toml  swagger.json
config/: network.json
containers/: foundry_cache.py  image_cache.py  network_manager.py  persistent_container_manager.py
containers/images/: Dockerfile  Dockerfile.foundry
containers/node/: anvil_container_manager.py  anvil_manager.py
docs/: ANVIL_MANAGEMENT.md  CONTAINER_MANAGEMENT.md  TODO.md
routes/: admin.py  deployment.py  network.py
tests/: test_anvil_auto_shutdown.py  test_anvil_container.py  test_anvil_simple.py  test_anvil_snapshots.py  test_image_cache.py  test_network_feature.py
tests/anvil_snapshots/: snapshot_1754794291.json
utils/: __init__.py  error_logger.py
